src/opts/tests/snapshots/inlyne__opts__tests__error_msg__unknown_theme.snap
---
source: src/opts/tests/error_msg.rs
description: "light-theme.code-highlighter = \"doesnt-exist\""
expression: err
---
TOML parse error at line 1, column 32
  |
1 | light-theme.code-highlighter = "doesnt-exist"
  |                                ^^^^^^^^^^^^^^
"doesnt-exist" didn't match any of the expected variants: ["base16-ocean-dark", "base16-eighties-dark", "base16-mocha-dark", "base16-ocean-light", "inspired-github", "solarized-dark", "solarized-light"]

